--- a/index.slim
+++ b/index.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta charset="utf-8"
-    title Ростов-город
+    title Template
     link rel="stylesheet" href="css/main.css"   
     link href="http://fonts.googleapis.com/css?family=Roboto:400,100,‌​100italic,300,300ita‌​lic,400italic,500,50‌​0italic,700,700itali‌​c,900italic,900" rel="stylesheet" type="text/css" 
     
@@ -10,8 +10,9 @@ html
   
     header
     
+    main
+    
     footer    
     
     
-  script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"
   script src="js/main.js"
