--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,16 +1,3 @@
-@font-face
-  font-family: 'Roboto'
-  src: url('Roboto-ThinItalic-webfont.eot')
-  src: url('Roboto-ThinItalic-webfont.eot?#iefix') format("embedded-opentype"), url('Roboto-ThinItalic-webfont.woff') format("woff"), url('Roboto-ThinItalic-webfont.ttf') format("truetype"), url('Roboto-ThinItalic-webfont.svg#RobotoThinItalic') format("svg")
-  font-weight: 200
-  font-style: italic
+@import "../../bower_components/normalize.css/normalize.css"
 
-html
-  font-family: Roboto
-
-*
-  margin: 0
-  padding: 0
-
-body
-  
+@import "partials/variables"
